add a couple of tweaks to padding on index and centring of content when small

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
                                     <img 
                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSziCX9HpxmxnZRnhwQyfHeZMFHGn0luZJ24MurgIO4os3PWL_g"
                                         alt= "image"
-                                        class="img-fluid index-img"                                
+                                        class="img-fluid portfolio-img"                                
                                         href="xkcd.com"
                                     >
                                     <h4 class="link-text">Word Guess</h4>
@@ -75,7 +75,7 @@
                                     <img 
                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSziCX9HpxmxnZRnhwQyfHeZMFHGn0luZJ24MurgIO4os3PWL_g"
                                         alt= "image"
-                                        class="img-fluid index-img"                                
+                                        class="img-fluid portfolio-img"                                
                                         href="xkcd.com"
                                     >
                                     <h4 class="link-text">RPG Game</h4>
@@ -91,7 +91,7 @@
                                     <img 
                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSziCX9HpxmxnZRnhwQyfHeZMFHGn0luZJ24MurgIO4os3PWL_g"
                                         alt= "image"
-                                        class="img-fluid index-img"                                
+                                        class="img-fluid portfolio-img"                                
                                         href="xkcd.com"
                                     >
                                     <h4 class="link-text">Trivia Game</h4>
@@ -105,7 +105,7 @@
                                     <img 
                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSziCX9HpxmxnZRnhwQyfHeZMFHGn0luZJ24MurgIO4os3PWL_g"
                                         alt= "image"
-                                        class="img-fluid index-img"                                
+                                        class="img-fluid portfolio-img"                                
                                         href="xkcd.com"
                                     >
                                     <h4 class="link-text">Info Widget</h4>
@@ -121,7 +121,7 @@
                                     <img 
                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSziCX9HpxmxnZRnhwQyfHeZMFHGn0luZJ24MurgIO4os3PWL_g"
                                         alt= "image"
-                                        class="img-fluid index-img"                                
+                                        class="img-fluid portfolio-img"                                
                                         href="xkcd.com"
                                     >
                                     <h4 class="link-text">Rock, Paper, Scissors</h4>
