--- a/portfolio.html
+++ b/portfolio.html
@@ -58,13 +58,12 @@
                     <!--First row of 2 images used as links with text in lie with theme-->
                     <div class="row">
                         <div class="col-md-6 col-sm-12" id="word-guess">    
-                            <a class="portfolio-link" href="https://www.xkcd.com/">
+                            <a href="https://www.xkcd.com/" target="_blank">
                                 <div class="portfolio-link">
                                     <img 
                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSziCX9HpxmxnZRnhwQyfHeZMFHGn0luZJ24MurgIO4os3PWL_g"
-                                        alt= "image"
-                                        class="img-fluid portfolio-img"                                
-                                        href="xkcd.com"
+                                        alt= "Word Guess"
+                                        class="img-fluid portfolio-img"                            
                                     >
                                     <h4 class="link-text">Word Guess</h4>
                                 </div> 
@@ -73,13 +72,12 @@
                         </div>
 
                         <div class="col-md-6 col-sm-12" id = "rpg">    
-                            <a href="https://www.xkcd.com/">
+                            <a href="https://www.xkcd.com/" target="_blank">
                                 <div class="portfolio-link">
                                     <img 
                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSziCX9HpxmxnZRnhwQyfHeZMFHGn0luZJ24MurgIO4os3PWL_g"
-                                        alt= "image"
+                                        alt= "RPG Game"
                                         class="img-fluid portfolio-img"                                
-                                        href="xkcd.com"
                                     >
                                     <h4 class="link-text">RPG Game</h4>
                                 </div> 
@@ -90,13 +88,12 @@
                     <!--Second row of 2 images used as links with text in lie with theme-->
                     <div class="row">
                         <div class="col-md-6 col-sm-12" id= "trivia">    
-                            <a href="https://www.xkcd.com/">
+                            <a href="https://www.xkcd.com/" target="_blank">
                                 <div class="portfolio-link">
                                     <img 
                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSziCX9HpxmxnZRnhwQyfHeZMFHGn0luZJ24MurgIO4os3PWL_g"
-                                        alt= "image"
+                                        alt= "Trivia Game"
                                         class="img-fluid portfolio-img"                                
-                                        href="xkcd.com"
                                     >
                                     <h4 class="link-text">Trivia Game</h4>
                                 </div>
@@ -104,13 +101,12 @@
                         </div>
 
                         <div class="col-md-6 col-sm-12" id="info-widget">    
-                            <a href="https://www.xkcd.com/">
+                            <a href="https://www.xkcd.com/" target="_blank">
                                 <div class="portfolio-link">
                                     <img 
                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSziCX9HpxmxnZRnhwQyfHeZMFHGn0luZJ24MurgIO4os3PWL_g"
-                                        alt= "image"
+                                        alt= "Info Widget"
                                         class="img-fluid portfolio-img"                                
-                                        href="xkcd.com"
                                     >
                                     <h4 class="link-text">Info Widget</h4>
                                 </div>  
@@ -121,13 +117,12 @@
                     <!--Third row of 2 images used as links with text in lie with theme-->
                     <div class="row">
                         <div class="col-md-6 col-sm-6" id="rockpaperscissors">    
-                            <a href="https://www.xkcd.com/">
+                            <a href="https://www.xkcd.com/" target="_blank">
                                 <div class="portfolio-link">
                                     <img 
                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSziCX9HpxmxnZRnhwQyfHeZMFHGn0luZJ24MurgIO4os3PWL_g"
-                                        alt= "image"
+                                        alt= "Rock Paper Scissors"
                                         class="img-fluid portfolio-img"                                
-                                        href="xkcd.com"
                                     >
                                     <h4 class="link-text">Rock, Paper, Scissors</h4>
                                 </div>  
