change image alt

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <div class="col-md-12 col-sm-12">    
                             <img 
                                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSziCX9HpxmxnZRnhwQyfHeZMFHGn0luZJ24MurgIO4os3PWL_g"
-                                alt= "image"
+                                alt= "Baby Yoda"
                                 class="img-responsive float-left"
                                 id= "index-image"
                             >
